stuck with rendering issue, map not sizing properly

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,8 @@
     transform: rotate(360deg);
   }
 }
+
+/* .mapboxgl-canvas {
+  height: 50vh;
+  width: 100vw;
+} */
